--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_el.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_el.properties
@@ -16,6 +16,8 @@ heading-level=Επίπεδο επικεφαλίδας (Automatic Translation)
 image-size=Image Size (Automatic Copy)
 original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
+outline-primary=Outline Primary (Automatic Copy)
+outline-secondary=Outline Secondary (Automatic Copy)
 secondary=Δευτεροβάθμια (Automatic Translation)
 slider=Ρυθμιστικό (Automatic Translation)
 spacer=Διαχωριστικό (Automatic Translation)
