--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_en.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_en.properties
@@ -16,6 +16,8 @@ heading-level=Heading Level
 image-size=Image Size
 original-size=Original Size
 outline=Outline
+outline-primary=Outline Primary
+outline-secondary=Outline Secondary
 secondary=Secondary
 slider=Slider
 spacer=Spacer
