--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_hi_IN.properties
@@ -16,6 +16,8 @@ heading-level=शीर्ष स्तर (Automatic Translation)
 image-size=Image Size (Automatic Copy)
 original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
+outline-primary=Outline Primary (Automatic Copy)
+outline-secondary=Outline Secondary (Automatic Copy)
 secondary=द्वितीयक (Automatic Translation)
 slider=स्लाइडर (Automatic Translation)
 spacer=स्पेसर (Automatic Translation)
