--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ru.properties
@@ -16,6 +16,8 @@ heading-level=Заголовок Уровень (Automatic Translation)
 image-size=Image Size (Automatic Copy)
 original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
+outline-primary=Outline Primary (Automatic Copy)
+outline-secondary=Outline Secondary (Automatic Copy)
 secondary=Вторичного (Automatic Translation)
 slider=Ползунок (Automatic Translation)
 spacer=Распорка (Automatic Translation)
