--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_th.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_th.properties
@@ -16,6 +16,8 @@ heading-level=ระดับหัวเรื่อง (Automatic Translation)
 image-size=Image Size (Automatic Copy)
 original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
+outline-primary=Outline Primary (Automatic Copy)
+outline-secondary=Outline Secondary (Automatic Copy)
 secondary=รอง (Automatic Translation)
 slider=แถบ เลื่อน (Automatic Translation)
 spacer=ตัวเว้นระยะ (Automatic Translation)
