--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_ca.properties
@@ -16,6 +16,8 @@ heading-level=Nivell de títol (Automatic Translation)
 image-size=Image Size (Automatic Copy)
 original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
+outline-primary=Outline Primary (Automatic Copy)
+outline-secondary=Outline Secondary (Automatic Copy)
 secondary=Secundari
 slider=Control lliscant
 spacer=Spacer (Automatic Translation)
