--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_es.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_es.properties
@@ -16,6 +16,8 @@ heading-level=Nivel de dirección (Automatic Translation)
 image-size=Image Size (Automatic Copy)
 original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
+outline-primary=Outline Primary (Automatic Copy)
+outline-secondary=Outline Secondary (Automatic Copy)
 secondary=Secundario
 slider=Control deslizante
 spacer=Espaciador (Automatic Translation)
