--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language_nl.properties
@@ -16,6 +16,8 @@ heading-level=Heading Level (Automatic Copy)
 image-size=Image Size (Automatic Copy)
 original-size=Original Size (Automatic Copy)
 outline=Outline (Automatic Copy)
+outline-primary=Outline Primary (Automatic Copy)
+outline-secondary=Outline Secondary (Automatic Copy)
 secondary=Secundair
 slider=Schuifknop
 spacer=Spacer (Automatic Copy)
